# rhai-sci

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: tests.yml
docs/: highlight.html  rhai-lab-docs.md
examples/: download_and_regress.rhai  download_and_regress.rs  rhai_macro.rs
scripts/: argmax.rhai  argmax.rhai-test  argmin.rhai  argmin.rhai-test  assertions.rhai  assertions.rhai-test  bounds.rhai  bounds.rhai-test  constants.rhai  constants.rhai-test  cummax.rhai  cummax.rhai-test  cummin.rhai  cummin.rhai-test  cumprod.rhai  cumprod.rhai-test  cumsum.rhai  cumsum.rhai-test  cumtrapz.rhai  cumtrapz.rhai-test  diag.rhai  diag.rhai-test  diff.rhai  diff.rhai-test  eye.rhai  eye.rhai-test  flatten.rhai  fliplr.rhai  fliplr.rhai-test  flipud.rhai  flipud.rhai-test  horzcat.rhai  index.rhai  interp1.rhai  interp1.rhai-test  interp_interp1.rhai  intersect.rhai  intersect.rhai-test  inv.rhai  iqr.rhai  (+90 more)
src/: DOCS.md  assertions.rs  basic_statistics.rs  constants.rs  cumulative.rs  integration_and_differentiation.rs  io.rs  lib.rs  linalg.rs  machine_learning.rs  main.rs  matlab-on-rhai.rs  matrices_and_arrays.rs  matrix.rs  misc.rs  moving.rs  patterns.rs  rhai-sci-repl.rs  sets.rs  statistics.rs  trig.rs  utils.rs  validate.rs
tests/: basic_stats_tests.rhai  matrix_tests.rhai  rhai-sci-tests.rs  rhai_tests.rs  test_rand.rs  test_scripts.rs  tests.rhai  util_tests.rhai
