[package]
name = "rhai-sci"
version = "0.1.8"
edition = "2021"
authors = ["Chris McComb <ccmcc2012@gmail.com>"]
description = "Scientific computing in the Rhai scripting language"
repository = "https://github.com/rhaiscript/rhai-sci"
homepage = "https://github.com/rhaiscript/rhai-sci"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["scripting", "rhai", "scientific", "scripting-language", "matlab"]
categories = ["algorithms", "science"]
documentation = "https://docs.rs/rhai-sci"
build = "build.rs"

[features]
default = ["io", "rand", "nalgebra"]
metadata = ["rhai/metadata"]
io = ["polars", "url", "temp-file", "csv-sniffer", "minreq"]
nalgebra = ["nalgebralib", "linregress"]
rand = ["randlib"]
smartcore = ["smartcorelib", "bincode"]

[dependencies]
rhai = "1.8"
nalgebralib = {version = "0.32.1", optional = true, package = "nalgebra" }
polars = {version = "0.27.2", optional = true }
url = {version = "2.2.2", optional = true }
temp-file = {version = "0.1.6", optional = true }
csv-sniffer = {version = "0.1.1", optional = true }
minreq = { version = "2.6.0", features = ["json-using-serde", "https"], optional = true }
randlib = { version = "0.8", optional = true, package = "rand" }
smartstring = "1.0.1"
linregress = { version = "0.5.0", optional = true }
smartcorelib = {version = "0.2.1", optional = true, package = "smartcore", features=["serde"]}
bincode = { version = "1.3.3", optional = true }

[build-dependencies]
rhai = "1.8"
nalgebralib = {version = "0.32.1", optional = true, package = "nalgebra" }
polars = {version = "0.27.2", optional = true }
url = {version = "2.2.2", optional = true }
temp-file = {version = "0.1.6", optional = true }
csv-sniffer = {version = "0.1.1", optional = true }
minreq = { version = "2.6.0", features = ["json-using-serde", "https"], optional = true }
randlib = { version = "0.8", optional = true, package = "rand" }
serde_json = "1.0.82"
serde = "1.0.140"
smartstring = "1.0.1"
linregress = { version = "0.5.0", optional = true }
smartcorelib = {version = "0.2.1", optional = true, package = "smartcore", features=["serde"]}
bincode = { version = "1.3.3", optional = true }

[package.metadata.docs.rs]
all-features = true
